--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -32,7 +32,7 @@ public_path: "/src/images"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
-custom_preview: true
+instant_preview: true
 build:
   preview_command: npm run forestry:preview
   publish_command: npm run forestry:publish
