update preview settings

--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -47,3 +47,6 @@ build:
   preview_output_directory: public
   output_directory: public
   instant_preview_command: npm run forestry:preview
+  preview_docker_image: node:10
+  mount_path: "/srv"
+  working_dir: "/srv"
