--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-normalize-paths": "github:forestryio/gatsby-remark-normalize-paths#install-from-github",
+    "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
