--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@forestryio/gatsby-remark-normalize-paths": "^1.0.0",
     "bulma": "^0.7.2",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.20",
@@ -17,7 +18,6 @@
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-normalize-paths": "github:forestryio/gatsby-remark-normalize-paths#install-from-github",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
